--- a/ImporterWindowsService/ImporterWindowsService.csproj
+++ b/ImporterWindowsService/ImporterWindowsService.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBContexts\ExportDB\Datum.cs" />
+    <Compile Include="DBContexts\ExportDB\ExportDB.cs" />
+    <Compile Include="DBContexts\ImportDB\Datum.cs" />
+    <Compile Include="DBContexts\ImportDB\Hardware.cs" />
+    <Compile Include="DBContexts\ImportDB\ImportDB.cs" />
+    <Compile Include="DBContexts\ImportDB\Site.cs" />
     <Compile Include="Formats\CSV.cs" />
     <Compile Include="Formats\DB.cs" />
     <Compile Include="Formats\ImportTask.cs" />
